fixtures/frontend/milestone-2/invalid/interpolated-pattern-text/main.aivi
val subject = "Ada"

val result =
    subject
     ||> "{subject}" => 1
